package core.ports.session;

public interface IUserSessionObserver {
    void onUserLogout();
}
